// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Canonical Most Watched Page A11y I can see the skip to content link 1`] = `"مواد پر جائیں"`;

exports[`Canonical Most Watched Page Analytics ATI 1`] = `"<img height="1px" width="1px" alt="" style="position:absolute" src="https://logws1363.ati-host.net?s=598343&amp;s2=95&amp;p=urdu.media.video.page&amp;x2=[responsive]&amp;x3=[news-urdu]&amp;x4=[ur]&amp;x7=[list-datadriven]&amp;x8=[simorgh-nojs]&amp;x9=[%D8%B3%D8%A8%2520%D8%B3%DB%92%2520%D8%B2%DB%8C%D8%A7%D8%AF%DB%81%2520%D8%AF%DB%8C%DA%A9%DA%BE%DB%8C%2520%DA%AF%D8%A6%DB%8C%2520-%2520BBC%2520News%2520%D8%A7%D8%B1%D8%AF%D9%88]"/>"`;

exports[`Canonical Most Watched Page Footer Anchors should match text and url 1`] = `
{
  "text": "BBC News, اردو",
  "url": "/urdu",
}
`;

exports[`Canonical Most Watched Page Footer Anchors should match text and url 2`] = `
{
  "text": "جانیے کہ آپ بی بی سی پر کیوں اعتماد کر سکتے ہیں",
  "url": "https://www.bbc.com/urdu/institutional-49282935",
}
`;

exports[`Canonical Most Watched Page Footer Anchors should match text and url 3`] = `
{
  "text": "استعمال کے ضوابط",
  "url": "https://www.bbc.com/urdu/institutional-37588278",
}
`;

exports[`Canonical Most Watched Page Footer Anchors should match text and url 4`] = `
{
  "text": "بی بی سی کے بارے میں",
  "url": "https://www.bbc.com/urdu/institutional-37588280",
}
`;

exports[`Canonical Most Watched Page Footer Anchors should match text and url 5`] = `
{
  "text": "پرائیویسی پالیسی",
  "url": "https://www.bbc.com/urdu/institutional-37588282",
}
`;

exports[`Canonical Most Watched Page Footer Anchors should match text and url 6`] = `
{
  "text": "کوکیز",
  "url": "https://www.bbc.com/usingthebbc/cookies/",
}
`;

exports[`Canonical Most Watched Page Footer Anchors should match text and url 7`] = `
{
  "text": "بی بی سی سے رابطہ کریں",
  "url": "https://www.bbc.co.uk/urdu/send/u50853907",
}
`;

exports[`Canonical Most Watched Page Footer Anchors should match text and url 8`] = `
{
  "text": "بیرونی لنکس کے بارے میں ہماری پالیسی.",
  "url": "https://www.bbc.com/editorialguidelines/guidance/feeds-and-links",
}
`;

exports[`Canonical Most Watched Page Footer I can click on the BBC branding and it would take me to the homepage 1`] = `"/urdu"`;

exports[`Canonical Most Watched Page Footer Paragraphs should match text 1`] = `"© 2024 بی بی سی. بی بی سی بیرونی ویب سائٹس کے مواد کا ذمہ دار نہیں بیرونی لنکس کے بارے میں ہماری پالیسی."`;

exports[`Canonical Most Watched Page Header I can see the branding 1`] = `"BBC News, اردو"`;

exports[`Canonical Most Watched Page Header Navigation link should match text and url 1`] = `
{
  "text": "صفحۂ اول",
  "url": "/urdu",
}
`;

exports[`Canonical Most Watched Page Header Navigation link should match text and url 2`] = `
{
  "text": "پاکستان",
  "url": "/urdu/topics/cjgn7n9zzq7t",
}
`;

exports[`Canonical Most Watched Page Header Navigation link should match text and url 3`] = `
{
  "text": "آس پاس",
  "url": "/urdu/topics/cl8l9mveql2t",
}
`;

exports[`Canonical Most Watched Page Header Navigation link should match text and url 4`] = `
{
  "text": "ورلڈ",
  "url": "/urdu/topics/cw57v2pmll9t",
}
`;

exports[`Canonical Most Watched Page Header Navigation link should match text and url 5`] = `
{
  "text": "کھیل",
  "url": "/urdu/topics/c340q0p2585t",
}
`;

exports[`Canonical Most Watched Page Header Navigation link should match text and url 6`] = `
{
  "text": "فن فنکار",
  "url": "/urdu/topics/ckdxnx900n5t",
}
`;

exports[`Canonical Most Watched Page Header Navigation link should match text and url 7`] = `
{
  "text": "سائنس",
  "url": "/urdu/topics/c40379e2ymxt",
}
`;

exports[`Canonical Most Watched Page Header Navigation link should match text and url 8`] = `
{
  "text": "ویڈیو",
  "url": "/urdu/topics/c1e0mzr3r2yt",
}
`;

exports[`Canonical Most Watched Page I can see the list items 1`] = `"ویڈیو, ایرانی خواتین کو گیمر بننے کے لیے ملک کیوں چھوڑنا پڑتا ہے؟7 جولائی 2020"`;

exports[`Canonical Most Watched Page I can see the list items 2`] = `"سنیں, سیربین ریڈیو پروگرام رات 8 بجے لائیو15 اکتوبر 2015"`;

exports[`Canonical Most Watched Page I can see the list items 3`] = `"ویڈیو, پاکستانی فری لانسنرز گھر بیٹھے ڈالر کیسے کماتے ہیں؟28 جنوری 2020"`;

exports[`Canonical Most Watched Page I can see the list items 4`] = `"ویڈیو, کٹوا گوشت: مٹی کا برتن، لکڑی کی آگ اور پانچ گھنٹے کے بعد لذیذ گوشت تیار12 اگست 2019"`;

exports[`Canonical Most Watched Page I can see the list items 5`] = `"ویڈیو, چین کا شہر ووہان لاک ڈاؤن سے کیسے نکلا؟3 جولائی 2020"`;

exports[`Canonical Most Watched Page I can see the list items 6`] = `"ویڈیو, ’سپائے کیم‘: جنوبی کوریا میں خفیہ کیمروں کی وبا4 دسمبر 2018"`;

exports[`Canonical Most Watched Page I can see the list items 7`] = `"ویڈیو, انٹرنیٹ پر سیکس کے نام پر لوگوں کو لوٹنے والے جعلسازوں سے کیسے نمٹا جائے؟10 دسمبر 2018"`;

exports[`Canonical Most Watched Page I can see the list items 8`] = `"ویڈیو, کورونا وائرس کی وبا آخر کب ختم ہوگی؟4 مئ 2020"`;

exports[`Canonical Most Watched Page I can see the list items 9`] = `"ویڈیو, 100 خواتین: آن لائن گیمر خاتون29 نومبر 2016"`;

exports[`Canonical Most Watched Page I can see the list items 10`] = `"ویڈیو, جان نکسن کی سی آئی اے میں شمولیت کے دن سے صدام حسین کے بارے میں تحقیق ان کی زندگی کا محور۔5 جنوری 2017"`;

exports[`Canonical Most Watched Page Main heading should match text 1`] = `"سب سے زیادہ دیکھی گئی"`;

exports[`Canonical Most Watched Page Main heading should match text 2`] = `"سب سے زیادہ دیکھی گئی"`;

exports[`Canonical Most Watched Page SEO Apple Touch Icon should match attributes 1`] = `
{
  "sizes": null,
  "url": "http://localhost:7080/urdu/images/icons/icon-192x192.png",
}
`;

exports[`Canonical Most Watched Page SEO Apple Touch Icon should match attributes 2`] = `
{
  "sizes": "72x72",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/urdu/images/icons/icon-72x72.png",
}
`;

exports[`Canonical Most Watched Page SEO Apple Touch Icon should match attributes 3`] = `
{
  "sizes": "96x96",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/urdu/images/icons/icon-96x96.png",
}
`;

exports[`Canonical Most Watched Page SEO Apple Touch Icon should match attributes 4`] = `
{
  "sizes": "128x128",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/urdu/images/icons/icon-128x128.png",
}
`;

exports[`Canonical Most Watched Page SEO Apple Touch Icon should match attributes 5`] = `
{
  "sizes": "144x144",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/urdu/images/icons/icon-144x144.png",
}
`;

exports[`Canonical Most Watched Page SEO Apple Touch Icon should match attributes 6`] = `
{
  "sizes": "152x152",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/urdu/images/icons/icon-152x152.png",
}
`;

exports[`Canonical Most Watched Page SEO Apple Touch Icon should match attributes 7`] = `
{
  "sizes": "180x180",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/urdu/images/icons/icon-180x180.png",
}
`;

exports[`Canonical Most Watched Page SEO Apple Touch Icon should match attributes 8`] = `
{
  "sizes": "192x192",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/urdu/images/icons/icon-192x192.png",
}
`;

exports[`Canonical Most Watched Page SEO Apple Touch Icon should match attributes 9`] = `
{
  "sizes": "384x384",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/urdu/images/icons/icon-384x384.png",
}
`;

exports[`Canonical Most Watched Page SEO Apple Touch Icon should match attributes 10`] = `
{
  "sizes": "512x512",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/urdu/images/icons/icon-512x512.png",
}
`;

exports[`Canonical Most Watched Page SEO Canonical link 1`] = `"http://localhost:7080/urdu/media/video"`;

exports[`Canonical Most Watched Page SEO Dir attribute 1`] = `"rtl"`;

exports[`Canonical Most Watched Page SEO FB app ID 1`] = `"1609039196070050"`;

exports[`Canonical Most Watched Page SEO Heading level 1 1`] = `"سب سے زیادہ دیکھی گئی"`;

exports[`Canonical Most Watched Page SEO Lang attribute 1`] = `"ur"`;

exports[`Canonical Most Watched Page SEO Linked data should match text 1`] = `
{
  "@context": "http://schema.org",
  "@graph": [
    {
      "@type": "WebPage",
      "image": {
        "@type": "ImageObject",
        "height": 576,
        "url": "https://news.files.bbci.co.uk/ws/img/logos/og/urdu.png",
        "width": 1024,
      },
      "inLanguage": {
        "@type": "Language",
        "alternateName": "ur",
        "name": "Urdu",
      },
      "mainEntityOfPage": {
        "@id": "http://localhost:7080/urdu/media/video",
        "@type": "WebPage",
        "name": "سب سے زیادہ دیکھی گئی",
      },
      "publisher": {
        "@type": "NewsMediaOrganization",
        "logo": {
          "@type": "ImageObject",
          "height": 576,
          "url": "https://news.files.bbci.co.uk/ws/img/logos/og/urdu.png",
          "width": 1024,
        },
        "name": "BBC News اردو",
        "publishingPrinciples": "https://www.bbc.com/urdu/institutional-49282935",
      },
      "thumbnailUrl": "https://news.files.bbci.co.uk/ws/img/logos/og/urdu.png",
      "url": "http://localhost:7080/urdu/media/video",
    },
  ],
}
`;

exports[`Canonical Most Watched Page SEO OG description 1`] = `"سب سے زیادہ دیکھی گئی - BBC News اردو"`;

exports[`Canonical Most Watched Page SEO OG image 1`] = `"https://news.files.bbci.co.uk/ws/img/logos/og/urdu.png"`;

exports[`Canonical Most Watched Page SEO OG image alt 1`] = `"BBC News اردو"`;

exports[`Canonical Most Watched Page SEO OG locale 1`] = `"ur"`;

exports[`Canonical Most Watched Page SEO OG site name 1`] = `"BBC News اردو"`;

exports[`Canonical Most Watched Page SEO OG title 1`] = `"سب سے زیادہ دیکھی گئی - BBC News اردو"`;

exports[`Canonical Most Watched Page SEO OG type 1`] = `"website"`;

exports[`Canonical Most Watched Page SEO OG url 1`] = `"http://localhost:7080/urdu/media/video"`;

exports[`Canonical Most Watched Page SEO Page title 1`] = `"سب سے زیادہ دیکھی گئی - BBC News اردو"`;

exports[`Canonical Most Watched Page SEO Robots meta tag 1`] = `"noodp, noydir, max-image-preview:large"`;

exports[`Canonical Most Watched Page SEO Twitter card 1`] = `"summary_large_image"`;

exports[`Canonical Most Watched Page SEO Twitter creator 1`] = `"@bbcurdu"`;

exports[`Canonical Most Watched Page SEO Twitter description 1`] = `"سب سے زیادہ دیکھی گئی - BBC News اردو"`;

exports[`Canonical Most Watched Page SEO Twitter image alt 1`] = `"BBC News اردو"`;

exports[`Canonical Most Watched Page SEO Twitter image src 1`] = `"https://news.files.bbci.co.uk/ws/img/logos/og/urdu.png"`;

exports[`Canonical Most Watched Page SEO Twitter site 1`] = `"@bbcurdu"`;

exports[`Canonical Most Watched Page SEO Twitter title 1`] = `"سب سے زیادہ دیکھی گئی - BBC News اردو"`;
